--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -142,3 +142,10 @@
     width: 100%;
   }
 }
+
+@media (max-width: 768px) {
+  .navbar__logo-img {
+    height: 92px;
+    transform: none;
+  }
+}
