--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -109,5 +109,6 @@ button {
     --font-hero-title: 28px;
     --font-hero-subtitle: 16px;
     --font-section-title: 24px;
+    --navbar-height: 108px;
   }
 }
